# SAROPTReg-TranslatModels

./: README.md  dbg.ipynb  pyproject.toml
saroptreg_models/: __init__.py  masks.py  scheme.py  viz_normalization.py
saroptreg_models/metrics/: cmr.py  meandist.py
saroptreg_models/models/fftunet/: arch.py  loss.py  scheme.py
saroptreg_models/models/marunet/: arch.py  blocks.py  loss.py  mask.py  scheme.py
saroptreg_models/models/mcgfs/: arch.py  loss.py  scheme.py
saroptreg_models/models/osmnet/: arch.py  blocks.py  loss.py  scheme.py
saroptreg_models/weights/: original_mcgf_state_dict.pt  original_osmnet_state_dict.pt
